upload avatar and send email  improvement
